<?xml version="1.0"?>
<package format="3">
  <name>teleoperation</name>
  <version>0.0.1</version>
  <description>ROS2 package for controlling a Dynamixel-based teleoperation suit</description>

  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <!-- build -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- exec dependencies -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>dynamixel_sdk</exec_depend>

  <!-- test -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
